// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<List /> should not render invalid children 1`] = `
<List>
  <List
    className=""
    role={null}
  >
    <ul
      className=" common_list"
      role={null}
    >
      <ListItem
        className="css-138yi4n"
        isSelected={false}
        key="child-0/.0"
        role={null}
      >
        <li
          className="css-138yi4n common__list__list-item sg-9mznus-item-unselected"
          data-test-id="listItem"
          role={null}
        >
          <div
            className="css-1ckzvk7"
          >
            <Item
              className={null}
              image={null}
              isDisabled={false}
              isSelected={false}
              link={null}
              onClick={null}
              rightComponent={null}
              testId={null}
              title="List Item"
            >
              <Grid
                className="css-1qcr7hz"
                component="div"
                wrap={false}
              >
                <div
                  className="common__grid css-1qcr7hz sg-190r8b9-root-noWrap"
                >
                  <GridItem
                    className="css-10fxwvh"
                    component="div"
                    grow={1}
                    shrink={1}
                  >
                    <div
                      className="sg-xljr6b-root css-10fxwvh"
                    >
                      List Item
                    </div>
                  </GridItem>
                </div>
              </Grid>
            </Item>
          </div>
        </li>
      </ListItem>
    </ul>
  </List>
</List>
`;

exports[`<List /> should not render without children 1`] = `<List />`;

exports[`<List /> should render with two children 1`] = `
<List>
  <List
    className=""
    role={null}
  >
    <ul
      className=" common_list"
      role={null}
    >
      <ListItem
        className="css-138yi4n"
        isSelected={false}
        key="child-0/.0"
        role={null}
      >
        <li
          className="css-138yi4n common__list__list-item sg-9mznus-item-unselected"
          data-test-id="listItem"
          role={null}
        >
          <div
            className="css-1ckzvk7"
          >
            <Item
              className={null}
              image={null}
              isDisabled={false}
              isSelected={false}
              link={null}
              onClick={null}
              rightComponent={null}
              testId={null}
              title="List Item"
            >
              <Grid
                className="css-1qcr7hz"
                component="div"
                wrap={false}
              >
                <div
                  className="common__grid css-1qcr7hz sg-190r8b9-root-noWrap"
                >
                  <GridItem
                    className="css-10fxwvh"
                    component="div"
                    grow={1}
                    shrink={1}
                  >
                    <div
                      className="sg-xljr6b-root css-10fxwvh"
                    >
                      List Item
                    </div>
                  </GridItem>
                </div>
              </Grid>
            </Item>
          </div>
        </li>
      </ListItem>
      <ListItem
        className="css-138yi4n"
        isSelected={false}
        key="child-1/.1"
        role={null}
      >
        <li
          className="css-138yi4n common__list__list-item sg-9mznus-item-unselected"
          data-test-id="listItem"
          role={null}
        >
          <div
            className="css-1ckzvk7"
          >
            <Item
              className={null}
              image={null}
              isDisabled={false}
              isSelected={false}
              link={null}
              onClick={null}
              rightComponent={null}
              testId={null}
              title="List Item"
            >
              <Grid
                className="css-1qcr7hz"
                component="div"
                wrap={false}
              >
                <div
                  className="common__grid css-1qcr7hz sg-190r8b9-root-noWrap"
                >
                  <GridItem
                    className="css-10fxwvh"
                    component="div"
                    grow={1}
                    shrink={1}
                  >
                    <div
                      className="sg-xljr6b-root css-10fxwvh"
                    >
                      List Item
                    </div>
                  </GridItem>
                </div>
              </Grid>
            </Item>
          </div>
        </li>
      </ListItem>
    </ul>
  </List>
</List>
`;
